# lion

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN_REVIEW.md  FINAL_APPROVAL.md  FINAL_VERIFICATION.md  Lion.toml  QA_VERIFICATION.md  README.md  TEST_REPORT.md  fix_summary.md  package-lock.json  package.json  pr_description.md
agentic_cli/: Cargo.toml
agentic_cli/src/: handlers.rs  main.rs
agentic_core/: Cargo.toml
agentic_core/src/: element.rs  event_log.rs  lib.rs  orchestrator.rs  pile.rs  plugin_manager.rs  storage.rs  store.rs
agentic_core/src/agent/: events.rs  mock.rs  mod.rs  protocol.rs
agentic_core/src/collections/: mod.rs
agentic_core/src/collections/pile/: mod.rs  tests.rs
agentic_core/src/collections/progression/: mod.rs  tests.rs
agentic_core/src/event_log/: mod.rs  stats.rs
agentic_core/src/events/: sse.rs
agentic_core/src/orchestrator/: events.rs  handlers.rs  metadata.rs  processor.rs  types.rs
agentic_core/src/orchestrator/events/: agent.rs  mod.rs  plugin.rs  task.rs
agentic_core/src/orchestrator/metadata/: helpers.rs  mod.rs
agentic_core/src/plugin_manager/: error.rs  loader.rs  manager.rs  manifest.rs  mod.rs  registry.rs  tests.rs
agentic_core/src/storage/: error.rs  file.rs  types.rs
agentic_core/src/types/: mod.rs
agentic_core/src/types/agent/: mod.rs
agentic_core/src/types/plugin/: mod.rs  response.rs
agentic_core/src/types/traits/: mod.rs
agentic_core/tests/: plugin_integration_tests.rs
lion/capabilities/: Cargo.toml
lion/capabilities/src/: capability.rs  checker.rs  lib.rs  store.rs
lion/concurrency/: Cargo.toml
lion/concurrency/src/: lib.rs  manager.rs  pool.rs
lion/core/: Cargo.toml
lion/core/src/: error.rs  traits.rs  types.rs
lion/isolation/: Cargo.toml
lion/isolation/src/: backend.rs  lib.rs  store.rs  wasm.rs
lion/lion_capabilities/: Cargo.toml
lion/lion_capabilities/src/: checker.rs  error.rs  lib.rs  manager.rs
lion/lion_capabilities/src/policy/: default_policy.rs  fs_policy.rs  mod.rs  network_policy.rs
lion/lion_capability/: Cargo.toml  README.md
lion/lion_capability/src/: lib.rs
lion/lion_capability/src/attenuation/: combine.rs  filter.rs  mod.rs  proxy.rs
lion/lion_capability/src/check/: aggregator.rs  audit.rs  engine.rs  mod.rs
lion/lion_capability/src/model/: capability.rs  composite.rs  file.rs  memory.rs  message.rs  mod.rs  network.rs  plugin_call.rs
lion/lion_capability/src/store/: in_memory.rs  mod.rs  partial_revocation.rs
lion/lion_capability_manager/: Cargo.toml
lion/lion_capability_manager/src/: error.rs  lib.rs  manager.rs  policy.rs
lion/lion_cli/: Cargo.toml  README.md
lion/lion_cli/scripts/: demo.sh
lion/lion_cli/src/: cli.rs  error.rs  event_printer.rs  formatter.rs  handlers.rs  integration.rs  lib.rs  logging.rs  main.rs  system.rs
lion/lion_cli/src/commands/: capabilities.rs  chain.rs  info.rs  list.rs  load.rs  load_wasm.rs  mod.rs  plugin.rs  policy.rs  send.rs  system.rs  unload.rs  workflow.rs
lion/lion_cli/src/interfaces/: capability.rs  isolation.rs  mod.rs  observability.rs  policy.rs  runtime.rs  workflow.rs
lion/lion_cli/src/tests/: mod.rs
lion/lion_cli/tests/: command_integration_tests.rs
lion/lion_core/: Cargo.toml
lion/lion_core/src/: agent.rs  capability.rs  error.rs  id.rs  isolation.rs  lib.rs  macros.rs  message.rs  orchestrator.rs  pile.rs  plugin.rs  plugin_manager.rs  progression.rs  resource.rs  storage.rs  store.rs
lion/lion_core/src/agent/: events.rs  mock.rs  mod.rs  protocol.rs
lion/lion_core/src/event_log/: core.rs  (+6 more)
lion/lion_core/tests/: concurrency_test.rs  events_test.rs  integration_test.rs  isolation_test.rs  orchestrator_integration_tests.rs  plugin_integration_tests.rs  storage_integration_tests.rs
lion/lion_isolation/: Cargo.toml  README.md
lion/lion_isolation/src/: lib.rs
lion/lion_isolation/tests/: integration_test.rs
lion/lion_isolation_wasm/: Cargo.toml
lion/lion_isolation_wasm/src/: backend.rs  config.rs  error.rs  host_functions.rs  instance.rs  lib.rs  memory.rs  module.rs
lion/lion_message_bus/: Cargo.toml
lion/lion_message_bus/src/: config.rs  error.rs  in_memory.rs  inmemory.rs  lib.rs  message_queue.rs  topic.rs
lion/lion_plugin_manager/: Cargo.toml
lion/lion_plugin_manager/src/: error.rs  lib.rs  loader.rs  manager.rs  manifest.rs  resource.rs  resource_monitor.rs  workflow.rs
lion/lion_ui/: Cargo.toml  Dockerfile  build.rs
lion/lion_ui/frontend/: index.html
lion/lion_ui/src/: agents.rs  events.rs  lib.rs  logs.rs  main.rs  plugins.rs  state.rs
lion/lion_ui/src-tauri/: main.rs  tauri.conf.json
lion/lion_ui/src_tauri/: Cargo.toml
lion/lion_ui/templates/: index.html
lion/lion_wasm_runtime/: Cargo.toml
lion/lion_wasm_runtime/src/: error.rs  host_function.rs  instance.rs  lib.rs  module.rs  runtime.rs
lion/observability/: Cargo.toml
lion/observability/src/: lib.rs  metrics.rs  tracing.rs
lion/policy/: Cargo.toml
lion/policy/src/: engine.rs  lib.rs  rule.rs  store.rs
lion/runtime/: Cargo.toml
lion/runtime/src/: config.rs  lib.rs  plugin.rs
lion/runtime/tests/: test_basic_plugin.rs
lion/workflow/: Cargo.toml
lion/workflow/src/: engine.rs  execution.rs  lib.rs  node.rs  storage.rs
lion_ui/: Cargo.toml  README.md  TAURI_MIGRATION.md  build.rs
lion_ui/frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
lion_ui/frontend/src/: App.css  App.tsx  index.css  types.ts
lion_ui/src/: agents.rs  events.rs  lib.rs  logs.rs  main.rs  plugins.rs  state.rs  utils.rs  wasm.rs
lion_ui/src-tauri/: Cargo.toml  tauri.conf.json
lion_ui/src-tauri/src/: agents.rs  bridge.rs  commands.rs  events.rs  graph.rs  lib.rs  logging.rs  main.rs  mock_runtime.rs  project.rs  runtime.rs  state.rs  utils.rs  workflows.rs
lion_ui/src-tauri/tests/: agent_commands_test.rs  agents_tests.rs  log_events_tests.rs  log_functionality_tests.rs  log_tests.rs  logging_tests.rs  project_management_tests.rs  project_tests.rs  runtime_tests.rs  workflow_commands_test.rs
lion_ui/tests/: mock.wat  test_cli_integration.rs  test_wasm_load.rs
(+273 files in other folders)
