[workspace]
members = [
    "lion/lion_capability",
    "lion/lion_cli",
    "lion/lion_concurrency",
    "lion/lion_core",
    "lion/lion_isolation",
    "lion/lion_observability",
    "lion/lion_policy",
    "lion/lion_runtime",
    "lion/lion_workflow",
    "lion_ui",
    "lion_ui/src-tauri"
]
resolver = "2"
