[package]
name = "agentic_cli"
version = "0.0.1a-phase1"
edition = "2021"

[dependencies]
agentic_core = { path = "../agentic_core" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"