[package]
name = "agentic_cli"
version = "0.0.1-alpha-phase3"
edition = "2021"

[dependencies]
agentic_core = { path = "../agentic_core" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }