[package]
name = "agentic_cli"
version = "0.0.1-stage1-phase5"
edition = "2021"

[dependencies]
agentic_core = { path = "../agentic_core" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }