[package]
name = "agentic_core"
version = "0.0.1-alpha-phase2"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }