[package]
name = "lion_ui"
version = "0.0.1-stage2-phase1"
edition = "2021"

[[bin]]
name = "lion_ui"
path = "src/main.rs"

[dependencies]
agentic_core = { path = "../agentic_core" }
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tower = { version = "0.5.2", features = ["util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
