[package]
name = "lion_ui"
version = "0.0.1-stage2-phase3"
edition = "2021"

[dependencies]
agentic_core = { path = "../agentic_core" }
axum = { version = "0.8.1", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
toml = "0.8"

[build-dependencies]
fs_extra = "1.3"

# Include frontend files in the package
[package.metadata]
frontend_dir = "frontend"
