[package]
name = "lion_capabilities"
version = "0.1.0"
edition = "2021"
description = "Capability management for the Lion WebAssembly Plugin System"

[dependencies]
lion_core = { path = "../lion_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
log = "0.4"
uuid = { version = "1.0", features = ["serde", "v4"] }
dashmap = "6.0"
url = "2.3"

[dev-dependencies]
tempfile = "3.5"