[package]
name = "lion_capability_manager"
version = "0.1.0"
edition = "2021"
description = "Capability management for the Lion WebAssembly Plugin System"

[dependencies]
lion_core = { path = "../lion_core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
dashmap = "6.1"