[package]
name = "lion_cli"
version = "0.0.1-stage1-phase5"
edition = "2021"

[dependencies]
lion_core = { path = "../lion_core" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
serde_json = "1.0"