[package]
name = "lion_cli"
version = "0.0.1-dev"
edition = "2021"

[dependencies]
lion_core = { path = "../lion_core" }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"