[package]
name = "lion_core"
version = "0.0.1-stage2-phase3"
edition = "2021"
description = "A microkernel-based framework for multi-agent AI orchestration"
authors = ["Lion"]
license = "MIT"

[features]
default = []
wasm_sandbox = ["wasmer", "wasmer-compiler-cranelift"]
multi_agent = []
language_protocol = []

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1"
futures = "0.3"
async-trait = "0.1"
tokio-stream = "0.1"
toml = "0.8"
lazy_static = "1.4"

# Optional dependencies for features
wasmer = { version = "3.0", optional = true }
wasmer-compiler-cranelift = { version = "3.0", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
