[package]
name = "lion_isolation_wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly isolation backend for the Lion Plugin System"

[dependencies]
lion_core = { path = "../lion_core" }
lion_capabilities = { path = "../lion_capabilities" }
wasmtime = "11.0"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
uuid = { version = "1.0", features = ["serde", "v4"] }
wat = "1.0"
url = "2.3"
ureq = "2.6"
dashmap = "5.4"
chrono = { version = "0.4", features = ["serde"] }