[package]
name = "lion_message_bus"
version = "0.1.0"
edition = "2021"
description = "Message bus implementation for the Lion WebAssembly Plugin System"

[dependencies]
lion_core = { path = "../lion_core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
dashmap = "5.4"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
