[package]
name = "lion_message_bus"
version = "0.1.0"
edition = "2021"
description = "Message bus for the Lion WebAssembly Plugin System"

[dependencies]
lion_core = { path = "../lion_core" }
lion_capabilities = { path = "../lion_capabilities" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
log = "0.4"
uuid = { version = "1.0", features = ["serde", "v4"] }
dashmap = "6.0"
chrono = { version = "0.4", features = ["serde"] }