[package]
name = "lion_plugin_manager"
version = "0.1.0"
edition = "2021"
description = "Plugin manager for the Lion WebAssembly Plugin System"

[dependencies]
lion_core = { path = "../lion_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
thiserror = "1.0"
log = "0.4"
uuid = { version = "1.0", features = ["serde", "v4"] }
dashmap = "5.4"
reqwest = { version = "0.11", features = ["blocking"], optional = true }
ureq = "2.6"
chrono = { version = "0.4", features = ["serde"] }