[package]
name = "lion_ui"
version = "0.0.1-dev"
edition = "2021"

[[bin]]
name = "lion_ui"
path = "src/main.rs"

[dependencies]
lion_core = { path = "../lion_core" }
axum = { version = "0.8.1", features = ["ws", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tower = { version = "0.5.2", features = ["util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"

[target.'cfg(desktop)'.dependencies]
tauri = { version = "2.2" }

[features]
default = []
desktop = []
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
reqwest-eventsource = "0.5"
reqwest = { version = "0.11", features = ["json"] }
