[package]
name = "lion_wasm_runtime"
version = "0.1.0"
edition = "2021"
description = "WebAssembly runtime integration for the Lion Plugin System"

[dependencies]
lion_core = { path = "../lion_core" }
wasmtime = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
wat = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }