[package]
name = "observability"
version = "0.3.0"
edition = "2021"
description = "Observability for the Lion plugin system"
license = "MIT OR Apache-2.0"

[dependencies]
core = { path = "../core" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-appender = "0.2.2"
tracing-opentelemetry = "0.19.0"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.18.0", features = ["rt-tokio"] }
metrics = "0.21.0"
metrics-exporter-prometheus = "0.12.1"
serde = { version = "1.0.171", features = ["derive"] }

[features]
default = []