[package]
name = "workflow"
version = "0.3.0"
edition = "2021"
description = "Parallel workflow execution for the Lion plugin system"
license = "MIT OR Apache-2.0"

[dependencies]
core = { path = "../core" }
concurrency = { path = "../concurrency" }
tokio = { version = "1.29.1", features = ["rt", "sync", "time", "macros"], optional = true }
async-trait = { version = "0.1.71", optional = true }
futures = { version = "0.3.28", optional = true }
dashmap = "5.5.0"
parking_lot = "0.12.1"
thiserror = "1.0.44"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
sled = { version = "0.34.7", optional = true }

[features]
default = []
async = ["dep:tokio", "dep:async-trait", "dep:futures"]
persistence = ["dep:sled"]